# CsvUploader

./: .gitignore  .replit  README.md  config.py  csv_uploader.py  csv_uploader.spec  pyproject.toml  test_server.py
static/: index.html
test_output/: attachment; filename=processed_test.csv  processed_test.csv  test.csv
uploads/: processed_test.csv  test.csv
