[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "flask>=3.1.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pyinstaller>=6.12.0",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
]
